--- a/index.html
+++ b/index.html
@@ -135,26 +135,26 @@
   <div class="trio">
     <section id="about" class="section-card">
       <h2>O mnie</h2>
-      <p>Biegła z zakresu informatyki. Łączę praktykę projektową z analitycznym podejściem do dokumentacji i dowodów. Pracuję w oparciu o transparentną metodologię i powtarzalne kryteria oceny.</p>
+      <p>Project Manager z wieloletnim doświadczeniem - zarówno software house jak i korporacyjnym. Biegła z zakresu informatyki. Łączę praktykę projektową z analitycznym podejściem do dokumentacji i dowodów. Pracuję w oparciu o transparentną metodologię i powtarzalne kryteria oceny.</p>
     </section>
 
     <section id="services" class="section-card">
       <h2>Zakres usług</h2>
       <ul>
-        <li>Opinie i ekspertyzy z zakresu informatyki (w tym na potrzeby postępowań)</li>
-        <li>Ocena zgodności dostaw i usług IT z dokumentacją umowną i rozliczeniową</li>
-        <li>Weryfikacja wartości rynkowej sprzętu i usług IT</li>
-        <li>Analiza wdrożeń, architektury i ryzyk projektowych</li>
+        <li>Opinie i ekspertyzy z zakresu informatyki (w tym na potrzeby postępowań).</li>
+        <li>Ocena zgodności dostaw i usług IT z dokumentacją umowną i rozliczeniową.</li>
+        <li>Weryfikacja wartości rynkowej usług IT.</li>
+        <li>Analiza wdrożeń, architektury i ryzyk projektowych.</li>
       </ul>
     </section>
 
     <section id="method" class="section-card">
       <h2>Metodyka pracy</h2>
       <ol>
-        <li>Analiza dokumentów źródłowych (umowy, protokoły, korespondencja)</li>
-        <li>Porównanie zakresu świadczeń z fakturami i protokołami</li>
-        <li>Ocena techniczna oraz rynkowa (benchmarki, katalogi, cenniki)</li>
-        <li>Syntetyczne wnioski — bez rozstrzygania sporów (decyzja należy do Sądu)</li>
+        <li>Analiza dokumentów źródłowych (umowy, protokoły, korespondencja).</li>
+        <li>Porównanie zakresu świadczeń z fakturami i protokołami.</li>
+        <li>Ocena techniczna oraz rynkowa (benchmarki, katalogi, cenniki).</li>
+        <li>Syntetyczne wnioski — bez rozstrzygania sporów.</li>
       </ol>
     </section>
   </div>
